src/objects/AppDynamics_User_Account__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Accesible_Systems__c</fullName>
        <label>Accessible Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Download Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Center</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AppDynamics User Accounts</relationshipLabel>
        <relationshipName>AppDynamics_User_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Enable_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to enable the access to AppDynamcis</description>
        <label>Enable Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AppDynamics User Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppDynamics User Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>